# SkyPro_homeworks

./: README.md  pyproject.toml
src/module1/: calculate_area.py  check_email.py  count_number_in_list.py  my_slice.py  sum_divisible.py
src/module2/: task1.py  task2.py  task3.py
src/module3/: task1.py  task2.py
tests/: test_calculate_area.py  test_check_email.py  test_count_number_in_list.py  test_my_slice.py  test_sum_divisible.py
