
[tool.poetry]
name = "skypro-continue"
version = "0.1.0"
description = ""
authors = ["Denis Khudyakov <denis.hudyakov27@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
requests = "^2.31.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.lint.dependencies]
black = "^23.10.1"
flake8 = "^6.1.0"
mypy = "^1.6.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '\.venv'

[tool.isort]
line_length = 119